--- a/django_project/templates/produtos_lista.html
+++ b/django_project/templates/produtos_lista.html
@@ -95,7 +95,7 @@
                 <h4 class="modal-title" id="myModalLabel">{{ produto.nome }}</h4>
             </div>
             <div class="modal-body">
-                <img src="/media/{{ produto.thumbnail }}" >
+                <img src="../media/{{ produto.thumbnail }}" >
                 <h5>{{ produto.descricao }}</h5>
 
             </div>
