--- a/django_project/templates/inicio/index_welcome.html
+++ b/django_project/templates/inicio/index_welcome.html
@@ -40,25 +40,25 @@
         <div class="carousel-inner">
 
             <div class="active item">
-                <img class="imagem" src="/media/{{ galeria.img1 }}" />
+                <img class="imagem" src="../../media/{{ galeria.img1 }}" />
                 <div class="carousel-caption">
                     <p><a class="btn btn-lg btn-warning" href="/dekori" role="button">Entrar no Site</a></p>
                 </div>
             </div>
             <div class="item">
-                <img src="/media/{{ galeria.img2 }}" />
+                <img src="../../media/{{ galeria.img2 }}" />
                 <div class="carousel-caption">
                     <p><a class="btn btn-lg btn-warning" href="/dekori" role="button">Entrar no Site</a></p>
                 </div>
             </div>
             <div class="item">
-                <img src="/media/{{ galeria.img3 }}" />
+                <img src="../../media/{{ galeria.img3 }}" />
                 <div class="carousel-caption">
                     <p><a class="btn btn-lg btn-warning" href="/dekori" role="button">Entrar no Site</a></p>
                 </div>
             </div>
              <div class="item">
-                <img src="/media/{{ galeria.img4 }}" />
+                <img src="../../media/{{ galeria.img4 }}" />
                 <div class="carousel-caption">
                     <p><a class="btn btn-lg btn-warning" href="/dekori" role="button">Entrar no Site</a></p>
                 </div>
