--- a/django_project/templates/base/base.html
+++ b/django_project/templates/base/base.html
@@ -30,14 +30,15 @@
     </style>
 
 
-    <title>Dekori  - Locações de Acessórios</title>
+    <title>Dekori - Locações de Acessórios</title>
 </head>
 <body>
     <div class="container shadow" style="background-color:white">
         <div class="container">
             <br/>
-            <img src="../../media/dekori_logo.png" alt="dekori logo" align="center"/>
-
+            <a  href="{% url 'core.views.index' %}" role="button">
+                <img src="../../media/dekori_logo.png" alt="dekori logo" align="center"/>
+            </a>
         </div>
         <div class="row" style="padding-top: 10px">
             {% include 'base/navbar.html' %}
