--- a/django_project/templates/sobre/sobre.html
+++ b/django_project/templates/sobre/sobre.html
@@ -34,7 +34,7 @@
 
     </p>
     <p>
-        Você também pode entrar em <a href="#">contato</a> com a gente pelo email, pelos celulares e por este site.  Fique à vontade!
+        Você também pode entrar em <a href="/dekori/toalhas">contato</a> com a gente pelo email, pelos celulares e por este site.  Fique à vontade!
     </p>
 </div>
 
