Alteracao na pagina incial. padding-top.

--- a/django_project/templates/inicio/index.html
+++ b/django_project/templates/inicio/index.html
@@ -56,6 +56,7 @@
     <title>Dekori  - Locações de Acessórios</title>
 </head>
 <body>
+<div style="padding-top: 40px">
     <div class="container shadow" style="background-color: white" >
         <div class="container">
             <br/>
@@ -114,6 +115,7 @@
         {% include 'base/footer.html' %}
 
     </div>
+</div>
 
 <!--Start of Zopim Live Chat Script-->
 <script type="text/javascript">
