correção na pagina sobre.html

--- a/django_project/templates/sobre/sobre.html
+++ b/django_project/templates/sobre/sobre.html
@@ -4,37 +4,36 @@
 <h3>Sobre Nós</h3>
 
 <hr/>
-<div>
+<div class="col-sm-12">
     <img src="../../media/sobre.jpg" alt="dekori" align="center"/>
 <br/>
 </div>
 
-<div style="text-align: justify;
-    text-justify: inter-word;">
+<div class="col-sm-11">
     <br/>
-    <p>
+    <p align="justify">
          Três amigas apaixonadas por festas resolveram se juntar para facilitar
         a sua vida na hora de organizar ‘aquela’ festinha.
     </p>
 
-    <p>
+    <p align="justify">
         Depois de sofrer um monte em busca de itens que aliassem bom gosto, facilidade e modernidade,
         as três amigas decidiram por criar a Dekori e com ela, proporcionar festas mais
         criativas, alegres e fáceis para aquelas que também são apaixonadas por festas.
     </p>
-    <p>
+    <p align="justify">
         Através da Dekori – você também pode decorar por conta própria a sua festa utilizando de
         acessórios coloridos, modernos e super charmosos que transformam qualquer bolinho em uma bela mesa!
     </p>
-    <p>
+    <p align="justify">
         Além dos coloridos suportes para doces e bolos, a Dekori pode te ajudar com as toalhas,
         passadeiras, sousplat, guardanapos e porta guardanapos. Tudo bem organizado, limpo e
         cheiroso para você não ter muito trabalho nem dor de cabeça.<br/>
         Sem falar na facilidade que é para encontrar a Dekori e reservar o seu material. Estamos disponíveis no facebook, instagram e whatsapp, acompanhando e postando tudo que é de novidade nesse universo.
 
     </p>
-    <p>
-        Você também pode entrar em <a href="/dekori/toalhas">contato</a> com a gente pelo email, pelos celulares e por este site.  Fique à vontade!
+    <p align="justify">
+        Você também pode entrar em contato com a gente pelo e-mail, pelos celulares e por este site.  Fique à vontade!
     </p>
 </div>
 
